# photo_portal

./: .env.example  .gitignore  dfasdf  docker-compose.prod.yaml  docker-compose.stage.yaml  docker-compose.yml  gtrp  package-lock.json  upload_photo_go.py
backend/: backend.dockerfile  beat-start.sh  celery.dockerfile  celery_beat.dockerfile  celery_start.sh  entrypoint.sh  pyproject.toml  worker_start.sh
backend/apps/cart/: admin.py  apps.py  models.py
backend/apps/child/: admin.py  apps.py
backend/apps/exceptions/: api_exceptions.py
backend/apps/kindergarten/: admin.py  apps.py  form.py  services.py  signals.py  tasks.py  validators.py  widget.py
backend/apps/order/: admin.py  apps.py  const.py  permissions.py  signals.py  tasks.py
backend/apps/parent/: admin.py  apps.py  permissions.py  tasks.py
backend/apps/photo/: admin.py  apps.py  fields.py  filters.py  form.py  permissions.py  s3_client.py  signals.py  tasks.py
backend/apps/promocode/: admin.py  apps.py
backend/apps/user/: admin.py  apps.py  dto.py  managers.py  tasks.py  validators.py
backend/apps/utils/: services.py
backend/apps_crm/client_cards/: admin.py  apps.py  filters.py  models.py  signals.py  tasks.py
backend/apps_crm/history/: admin.py  apps.py  models.py  signals.py
backend/apps_crm/notifications/: admin.py  apps.py  models.py
backend/apps_crm/registration/: apps.py  services.py  tasks.py
backend/apps_crm/roles/: admin.py  apps.py  filters.py  models.py  permissions.py  services.py  (+2 more)
backend/config/: celery.py  containers.py  middleware.py  redoc.py  settings.py  urls.py
(+640 files in other folders)
